# interfaz.old

./: American.Experience.S24E13.Silicon.Valley.720p.HDTV.x264-PBS.srt  BareMetal_Computing.md  README.md  RaspbianEnQEMU.md  aws.md  bienvenida.md  estudiantes.md  examenllave.pem  keySeptiembre.pem  llevesota2020.pem  modoBridge.sh  realVNC.sh  rpi_grafico.md  students.md
20b/equipo1/: README.md
20b/equipo4/: README.md
AWS/: readme.md
RP2040/SDK/: ARMtoolChain.md  readme.md
RP2040/blink/: Blink.ino.uf2  README.md
RP2040/picoprobe/: README.md
RP2040/waveshare/RP2040-Zero/C/: CMakeLists.txt  RP2040_Zero_Test.c  ReadmeCN.txt  ReadmeEN.txt
RP2040W/chatgtp/: Chatgpt-Circuitpython.py  readme.md
RP2040W/wifi/: readme.md
RUST/: readme.html
arm-toolchain/: compilacion.md  qemu.md  readme.md  windows.md
arm32/: install.sh  makefile  readme.md
arm32/codigo/: arreglo.s  capitulo2  cicloFor.s  delayExample.md  delayExample.s  div9entre3.md  div9entre3.s  first.md  first.s  gdb.md  greet.md  greet.s  hanoi.md  hanoi.s  hanoi2.s  holamundo.md  (+30 more)
arm64/: 10razonesAsm.md  editores.md  herramientas.md  holamundo.c  holamundo.s  readme.md
bare-metal/: readme.md
barebone/: readme.md
bash/: logo.md  readme.md
cpp/: readme.md
customAssembly/: README.md
docker/: Dockerfile  dockerlogo.md  dockerlogo.sh  git_push.txt  readme.md
gdb/: readme.md
gef/: readme.md
macOS/: readme.MD
programas/: README.md  holaMundoAsm.s
quiz/: readme.md
regalos/: Tshirt.ai  readme.md
templete/: helloWorld.s  readme.md  templete.s
tmux/: readme.md
wokwi/: readme.md
(+56 files in other folders)
